crates/test-ui/ui/implement_protocol_missing_super.stderr
error[E0277]: the trait bound `CustomObject: NSObjectProtocol` is not satisfied
 --> ui/implement_protocol_missing_super.rs
  |
  |     unsafe impl NSURLSessionDelegate for CustomObject {}
  |                                          ^^^^^^^^^^^^ the trait `NSObjectProtocol` is not implemented for `CustomObject`
  |
  = help: the following other types implement trait `NSObjectProtocol`:
            NSObject
            __NSProxy
            ProtocolObject<T>
            NSError
            NSNotification
            NSNotificationCenter
            NSString
            NSMutableString
          and $N others
note: required by a bound in `NSURLSessionDelegate`
 --> $WORKSPACE/framework-crates/objc2-foundation/src/generated/NSURLSession.rs
  |
  | / extern_protocol!(
  | |     pub unsafe trait NSURLSessionDelegate: NSObjectProtocol {
  | |                      -------------------- required by a bound in this trait
  | |         #[cfg(feature = "Foundation_NSError")]
  | |         #[optional]
... |
  | |     unsafe impl ProtocolType for dyn NSURLSessionDelegate {}
  | | );
  | |_^ required by this bound in `NSURLSessionDelegate`
  = note: this error originates in the macro `extern_protocol` (in Nightly builds, run with -Z macro-backtrace for more info)
